crates/cyrs-plan/tests/snapshots/serde_pretty__json_write_merge_node.snap
---
source: crates/cyrs-plan/tests/serde_pretty.rs
expression: "serde_json::to_value(&plan).unwrap()"
---
{
  "ops": [],
  "var_map": [],
  "write_ops": [
    {
      "bind": 0,
      "key_props": [
        "name"
      ],
      "labels": [
        "Person"
      ],
      "on_create": [
        {
          "op": "set_property",
          "prop": "created",
          "target": 0,
          "value": {
            "kind": "bool",
            "value": true
          }
        }
      ],
      "on_match": [
        {
          "op": "set_property",
          "prop": "updated",
          "target": 0,
          "value": {
            "kind": "bool",
            "value": true
          }
        }
      ],
      "op": "merge_node",
      "props": {
        "entries": [
          [
            "name",
            {
              "kind": "str",
              "value": "Bob"
            }
          ]
        ],
        "kind": "map"
      }
    }
  ]
}
