crates/cyrs-plan/tests/snapshots/serde_pretty__pretty_bind_path.snap
---
source: crates/cyrs-plan/tests/serde_pretty.rs
expression: pretty(&plan)
---
BindPath $3 = [$0, $1, $2]
  Expand ($0)-[*1..3(->) $1]->( AS $2)
    Source (AS $0)
