crates/cyrs-plan/tests/snapshots/serde_pretty__pretty_bind_path_in_optional_join.snap
---
source: crates/cyrs-plan/tests/serde_pretty.rs
expression: pretty(&plan)
---
OptionalJoin
  Source (AS $0)
  BindPath $1 = [$0]
