crates/cyrs-plan/tests/snapshots/serde_pretty__pretty_delete_detach.snap
---
source: crates/cyrs-plan/tests/serde_pretty.rs
expression: pretty(&plan)
---
WriteOps:
  DetachDelete [$0]
