crates/cyrs-plan/tests/snapshots/serde_pretty__pretty_expand.snap
---
source: crates/cyrs-plan/tests/serde_pretty.rs
expression: pretty(&plan)
---
Project [$0 AS a, $2 AS b]
  Expand ($0)-[:KNOWS(->) $1]->(:Person AS $2)
    Source (:Person AS $0)
