crates/cyrs-plan/tests/snapshots/serde_pretty__pretty_optional_join.snap
---
source: crates/cyrs-plan/tests/serde_pretty.rs
expression: pretty(&plan)
---
OptionalJoin
  Source (:Person AS $0)
  Source (:Post AS $1)
