crates/cyrs-plan/tests/snapshots/serde_pretty__pretty_order_skip_limit.snap
---
source: crates/cyrs-plan/tests/serde_pretty.rs
expression: pretty(&plan)
---
Limit 5
  Skip 10
    OrderBy [$0 DESC]
      Source (AS $0)
