crates/cyrs-plan/tests/snapshots/serde_pretty__pretty_source_label.snap
---
source: crates/cyrs-plan/tests/serde_pretty.rs
expression: pretty(&plan)
---
Source (:Person AS $0)
