crates/cyrs-plan/tests/snapshots/serde_pretty__pretty_union_all.snap
---
source: crates/cyrs-plan/tests/serde_pretty.rs
expression: pretty(&plan)
---
Union ALL
  Source (:Person AS $0)
  Source (:Animal AS $1)
